Finalizado aula tamanhos de textos.

--- a/ProjetoCSS3/tamanhosdetexto.html
+++ b/ProjetoCSS3/tamanhosdetexto.html
@@ -9,19 +9,29 @@
 
 
     <style type="text/css">
+        div {
+            font-size: 50px;
+        }
         .texto {
             /*
             px -> tamanho fixo
             % -> tamanho relativo
             em -> tamanho relativo ao container pai
             */
-            font-size: 100%;
+            font-size: 2.5em;
+        }
+        .texto2{
+            font-size: 1em;
         }
     </style>
 </head>
 
 <body>
-    <p class="texto">Conteúdos</p>
+    <div>
+        <p class="texto">Conteúdos 1</p>
+        <p class="texto2">Conteúdos 2</p>
+
+    </div>
 
 </body>
 
